# azure-openai-mini-proxy

./: .gitignore  Dockerfile  NOTICE  README.md  config.yaml  docker-compose.yml  pyproject.toml
azure_openai_mini_proxy/: __init__.py  azure_router.py  cli.py
